--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,11 @@ header {
   position: fixed;
   left: 0;
   top: 0;
+  z-index: 10;
 }
 header .headerLogo a {
   display: block;
-  margin-top: 22px;
+  margin: 22px 0 0 -10px;
 }
 nav ul {
   list-style-type: none;
@@ -82,6 +83,9 @@ nav ul li a:hover {
   height: 150px;
   background: #fff;
   margin-top: 90px;
+  position: relative ;
+  z-index: 0;
+  top: -140px;
 }
 #prodSlider {
   width: 800px;
@@ -89,16 +93,89 @@ nav ul li a:hover {
   display: block;
 }
 #prodSlider ul {
-  margin: 0;
+  margin: 10px 0;
+}
+#prodSlider .flex-viewport {
+  z-index: 1;
 }
 #prodSlider ul.slides li {
   display: none;
   overflow: hidden;
+  height: 130px;
+  width: 158px;
+  border-left: 1px transparent solid;
+  border-right: 1px #e9e8e9 solid;
+}
+#prodSlider ul.slides li.border {
+  border-left: 1px #e9e8e9 solid;
 }
 #prodSlider ul.slides li a {
   display: block;
-  height: 150px;
+  height: 130px;
   width: 158px;
-  border-left: 1px #e9e8e9 solid;
-  border-right: 1px #e9e8e9 solid;
+  color: #757173;
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: 600;
+  text-decoration: none;
+}
+#prodSlider ul.slides li a .prodIcon {
+  height: 60px;
+  width: 60px;
+  display: block;
+  margin: 20px auto 0;
+  opacity: 0.2;
+}
+#prodSlider ul.slides li a .title {
+  margin-top: 10px;
+  text-align: center;
+  color: #757173;
+}
+#prodSlider ul.slides li a .prodIcon,
+#prodSlider ul.slides li a .title {
+  transition: all ease-in-out 0.2s;
+}
+#prodSlider ul.slides li a:hover .prodIcon,
+#prodSlider ul.slides li a:hover .title {
+  opacity: 1;
+  color: #291f23;
+}
+#prodSlider .flex-direction-nav {
+  position: absolute;
+  width: 940px;
+  margin: -100px 0 0 -70px;
+  list-style-type: none;
+  height: 0px;
+  overflow: visible;
+  z-index: 0;
+}
+#prodSlider .flex-direction-nav li {
+  display: inline-block;
+  zoom: 1;
+  *display: inline;
+  width: 50%;
+  text-align: right;
+  height: 0;
+  overflow: visible;
+}
+#prodSlider .flex-direction-nav li:first-child {
+  text-align: left;
+}
+#prodSlider .flex-direction-nav li a {
+  display: inline-block;
+  zoom: 1;
+  *display: inline;
+  height: 40px;
+  width: 40px;
+  opacity: 0.45;
+  transition: all ease-in-out 0.2s;
+}
+#prodSlider .flex-direction-nav li a:hover {
+  opacity: 1;
+}
+#prodSlider .flex-direction-nav li a.flex-prev {
+  background: transparent url(../img/productArrows.png) no-repeat 0 0;
+}
+#prodSlider .flex-direction-nav li a.flex-next {
+  background: transparent url(../img/productArrows.png) no-repeat -50px 0;
 }
