--- a/css/style.less
+++ b/css/style.less
@@ -110,10 +110,10 @@ header {
 	width: 100%;
 	height: 150px;
 	background: #fff;
-	margin-top: 90px;
+	margin-top: -60px;
 	position: relative ;
 	z-index: 0;
-	top:  -140px;
+
 }
 
 #prodSlider {
@@ -226,7 +226,43 @@ header {
 			}
 
 
+/* ################################ */
+/* ############# Slider ############## */
+/* ################################ */
 
+#sliderWrapper {
+	position: relative;
+	min-width: 940px;
+	max-width: 1280px;
+	height: 410px;
+	margin: 0 auto;
+	overflow: hidden;
+}
+
+#slider {
+	position: absolute;
+	left: 50%;
+	margin-left: -640px;
+	width: 1280px;
+	height: 410px;
+}
+
+	#slider ul {
+		margin: 0;
+	}
+
+		#slider ul li {
+			display: none;
+			height: 410px;
+		}
+
+			#slider ul li .overlay {
+				display: block;
+				width: 100%;
+				height: 300px;
+				margin-top: 40px;
+				background: transparent url(../img/black25.png) repeat;
+			}
 
 
 
