--- a/css/style.css
+++ b/css/style.css
@@ -128,9 +128,9 @@ nav ul li a:hover {
   width: 100%;
   height: 150px;
   background: #fff;
-  margin-top: -60px;
-  position: relative ;
-  z-index: 0;
+  top: -60px;
+  position: fixed ;
+  z-index: 5;
 }
 #prodSlider {
   width: 800px;
@@ -232,7 +232,7 @@ nav ul li a:hover {
   min-width: 940px;
   max-width: 1280px;
   height: 410px;
-  margin: 0 auto;
+  margin: 90px auto 0 auto;
   overflow: hidden;
 }
 #slider {
