--- a/css/style.less
+++ b/css/style.less
@@ -161,9 +161,9 @@ header {
 	width: 100%;
 	height: 150px;
 	background: #fff;
-	margin-top: -60px;
-	position: relative ;
-	z-index: 0;
+	top: -60px;
+	position: fixed ;
+	z-index: 5;
 
 }
 
@@ -286,7 +286,7 @@ header {
 	min-width: 940px;
 	max-width: 1280px;
 	height: 410px;
-	margin: 0 auto;
+	margin: 90px auto 0 auto;
 	overflow: hidden;
 }
 
